syntax = "proto3";
package vco.schemas;
message Listing {
  string schema = 1;
  string title = 2;
  string description = 3;
  int64 price_sats = 4;
  repeated bytes media_cids = 5;
  int64 expiry_ms = 6;
  bytes previous_cid = 7;
}
